--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+
+# Ignore Google Service Account credentials JSON file(s)
+google-credentials.json
+*-credentials.json
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
