--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 
+# reading environment vars:
 python-dotenv
 
 # web application:
-Flask
-# authentication:
-Authlib
+Flask==2.0.0
 
-requests
+# auth (login with google via oauth):
+Authlib==1.0.0
 
+# auth (login with email/password):
+#pyrebase
+#jwt
+
+# database (cloud firestore):
+firebase-admin==5.0.0
+
+
+
+
+# testing:
 pytest
