--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 
+*.DS_Store
 
 # Ignore Google Service Account credentials JSON file(s)
 google-credentials.json
 google-credentials-prod.json
 *-credentials.json
 google-credentials*.json
+
 
 
 
