--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+
+*.DS_Store
+
+# Ignore Google Service Account credentials JSON file(s)
+google-credentials.json
+google-credentials-prod.json
+*-credentials.json
+google-credentials*.json
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
