Configure credentials filepath on CI

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,5 +48,9 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
+      env:
+        # access path of credentials file created by earlier auth step:
+        #GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
+        GOOGLE_CREDENTIALS_FILEPATH: ${{ steps.auth.outputs.credentials_file_path }}
       run: |
         pytest
